# whisper.cpp-kmp

./: .gitignore  .gitmodules  LICENSE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  publish.yml  sync-whispercpp.yml
core/: build.gradle.kts  gradle.properties
core/src/androidMain/kotlin/com/kmpile/whisper/: WhisperContext.android.kt
core/src/appleMain/kotlin/com/kmpile/whisper/: WhisperContext.apple.kt
core/src/commonMain/kotlin/com/kmpile/whisper/: Model.kt  WhisperContext.kt
core/src/jniMain/kotlin/com/kmpile/whisper/: JniWhisperContext.kt  WhisperKmpNative.kt
core/src/jvmMain/kotlin/com/kmpile/whisper/: WhisperContext.jvm.kt
core/src/nativeInterop/cinterop/: whisperkmp.def
core/src/wasmJsMain/kotlin/com/kmpile/whisper/: WhisperContext.wasmJs.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: build.gradle.kts
native/cpp/: CMakeLists.txt  build-ios.sh
native/cpp/src/: Transcriber.cpp  Transcriber.h  whisperkmp.cpp  whisperkmp.h  whisperkmp.map
native/desktop/: CMakeLists.txt
native/src/main/cpp/: CMakeLists.txt  whisperkmp-jni.cpp
